syntax = "proto3";

package services;
import "google/api/annotations.proto";

message ProdRequest{
  int32 prod_id= 1;//传入的商品id
  ProdAreas prod_area = 2 ; //商品所在区域
}
message ProdResponse{
  int32 prod_stock= 1; //商品库存
}

message QuerySize{
  int32 size = 1; //页尺寸
}
message ProdResponseList{//返回一堆商品库存，使用了repeated修饰符
  repeated ProdResponse prodres = 1;
}
//库房区域
enum ProdAreas{
  A = 0;
  B = 1;
  C = 2;
}

service ProdService{
  rpc GetProdStock(ProdRequest) returns (ProdResponse){
    option (google.api.http) = {
      get: "/v1/prod/{prod_id}"
    };
  }
  rpc GetProdStocks(QuerySize)returns (ProdResponseList){}
}